update research plan

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ book:
   title: "US Unemployment"
   author:
     - Ming Gao (mg4618)
-    - AUTHOR2 (UNI2)
+    - Hugo Hsieh (ph2680)
   repo-url: https://github.com/laurie-gao/US-unemployment
   date: today
   page-footer:
